more detailed installation instructions for windows & mac